--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,16 @@
 .Heart-logo {
-    height: 40vmin;
+    height: var(--size-logo);
     pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
     .Heart-logo {
-        animation: App-logo-spin infinite 10s linear;
+        animation: App-logo-spin infinite var(--rotation-speed) linear;
     }
 }
 
 .App-header {
-    background-color: #333233;
+    background-color: var(--background-color);
     min-height: 95vh;
     display: flex;
     flex-direction: column;
