--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,25 @@
     color: white;
 }
 
+.button {
+    font-size: 24px;
+    padding: 15px 32px;
+    border: none;
+    border-radius: 4px;
+    color: white;
+    text-align: center;
+    display: inline-flex;
+    margin-right: 16px;
+}
+
+.button1 {
+    background-color: green;
+}
+
+.button2 {
+    background-color: red;
+}
+
 @keyframes App-logo-spin {
     from {
         transform: rotate(0deg);
