--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,8 @@
-.Heart-logo {
-    height: var(--size-logo);
-    pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-    .Heart-logo {
-        animation: App-logo-spin infinite var(--rotation-speed) linear;
-    }
+.Top-menu {
+    background-color: grey;
+    min-height: 5vh;
+    display: flex;
+    flex-direction: row;
 }
 
 .App-header {
@@ -31,12 +27,15 @@
     margin-right: 16px;
 }
 
-.button1 {
-    background-color: green;
+.Heart-logo {
+    height: var(--size-logo);
+    pointer-events: none;
 }
 
-.button2 {
-    background-color: red;
+@media (prefers-reduced-motion: no-preference) {
+    .Heart-logo {
+        animation: App-logo-spin infinite var(--rotation-speed) linear;
+    }
 }
 
 @keyframes App-logo-spin {
@@ -46,4 +45,12 @@
     to {
         transform: rotate(360deg);
     }
+}
+
+.button1 {
+    background-color: green;
+}
+
+.button2 {
+    background-color: red;
 }
