--- a/src/App.css
+++ b/src/App.css
@@ -1,56 +1,32 @@
 .Top-menu {
-    background-color: grey;
-    min-height: 5vh;
+    background-color: #494d5f;
+    height: 60px;
     display: flex;
     flex-direction: row;
+    padding: 0;
+    margin: 0;
+    border: none;
+}
+
+.Heart-box {
+    padding-left: 1vh;
+    height: 55px;
+    border: none;
+    padding-top: 2px;
+}
+
+.Heart-logo {
+    height: 100%;
+    pointer-events: none;
 }
 
 .App-header {
-    background-color: var(--background-color);
-    min-height: 95vh;
+    background-color: #343241;
+    min-height: 94vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     font-size: calc(10px + 2vmin);
     color: white;
-}
-
-.button {
-    font-size: 24px;
-    padding: 15px 32px;
-    border: none;
-    border-radius: 4px;
-    color: white;
-    text-align: center;
-    display: inline-flex;
-    margin-right: 16px;
-}
-
-.Heart-logo {
-    height: var(--size-logo);
-    pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-    .Heart-logo {
-        animation: App-logo-spin infinite var(--rotation-speed) linear;
-    }
-}
-
-@keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
-}
-
-.button1 {
-    background-color: green;
-}
-
-.button2 {
-    background-color: red;
 }
