--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App-header {
-    background-color: #343241;
+    background-color: var(--background-color2);
     min-height: 94vh;
     display: flex;
     flex-direction: column;
