--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,33 @@
 .App-header {
     background-color: var(--background-color2);
     min-height: 94vh;
+    padding: 0;
+    margin: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     font-size: calc(10px + 2vmin);
     color: white;
+}
+
+.Nyan-cat {
+    padding: 0;
+    margin: 0;
+    border: 0;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+    .Nyan-cat {
+        animation: Cat-run infinite 5s linear;
+    }
+}
+
+@keyframes Cat-run {
+    from {
+        transform: translateX(-100%) scale(.4);
+    }
+    to {
+        transform: translateX(100%) scale(.4);
+    }
 }
