--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,3 @@
-html,
-body {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-}
-
-:root {
-    --background-color1: #494d5f;
-    --background-color2: #343241;
-    --button-hover-color: #676d86;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
